plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

def bumpsModVersion = gradle.startParameter.taskNames.any { taskName ->
	def packagingTaskName = taskName.tokenize(':').last()
	packagingTaskName in ['build', 'assemble', 'jar', 'remapJar']
}

def resolvedModVersion = project.mod_version
if (bumpsModVersion) {
	def propertiesFile = rootProject.file('gradle.properties')
	def propertiesText = propertiesFile.getText('UTF-8')
	def versionMatcher = propertiesText =~ /(?m)^mod_version=(\d+)\.(\d+)\.(\d+)([^\r\n]*)$/

	if (!versionMatcher.find()) {
		throw new GradleException('Cannot auto-increment mod_version. Expected format: mod_version=major.minor.patch')
	}

	def major = versionMatcher.group(1)
	def minor = versionMatcher.group(2)
	def patch = versionMatcher.group(3).toInteger() + 1
	def suffix = versionMatcher.group(4)
	resolvedModVersion = "${major}.${minor}.${patch}${suffix}"

	propertiesFile.setText(propertiesText.replaceFirst(/(?m)^mod_version=.*$/, "mod_version=${resolvedModVersion}"), 'UTF-8')
	project.ext.set('mod_version', resolvedModVersion)
}

version = resolvedModVersion
group = project.maven_group

repositories {
	maven {
		name = "ALiyun"
		url = "https://maven.aliyun.com/repository/public"
	}
	mavenCentral()

	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}
	maven {
		name = "Curse Maven"
		url = "https://cursemaven.com/"
	}

	maven {
		name = "GeckoLib"
		url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
	}
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"monvhua" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

configurations {
	axiomCompileOnlyMod {
		transitive = false
	}
}

def axiomClientApiJar = layout.buildDirectory.file("generated/axiom/axiomclientapi.jar")
def extractAxiomClientApi = tasks.register("extractAxiomClientApi", Copy) {
	from({ zipTree(configurations.axiomCompileOnlyMod.singleFile) }) {
		include "META-INF/jars/axiomclientapi.jar"
		eachFile { fileCopyDetails ->
			fileCopyDetails.path = "axiomclientapi.jar"
		}
	}
	into(axiomClientApiJar.map { it.asFile.parentFile })
	includeEmptyDirs = false
	doLast {
		if (!axiomClientApiJar.get().asFile.isFile()) {
			throw new GradleException("Axiom dependency did not contain META-INF/jars/axiomclientapi.jar")
		}
	}
}
def axiomClientApiCompileOnly = files(axiomClientApiJar).builtBy(extractAxiomClientApi)

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Axiom remains optional at runtime. The compile classpath is resolved from
	// Modrinth so a fresh checkout does not depend on run/.fabric/processedMods.
	axiomCompileOnlyMod "maven.modrinth:axiom:${project.axiom_version}"
	clientCompileOnly files(configurations.axiomCompileOnlyMod)
	clientCompileOnly axiomClientApiCompileOnly

	modImplementation "curse.maven:modern-ui-352491:7025818"
	modImplementation "curse.maven:forge-config-api-port-547434:6941149"

	modImplementation "com.electronwill.night-config:core:3.8.2"
	modImplementation "com.electronwill.night-config:toml:3.8.2"

	// Sodium rendering optimization dependency.
	modImplementation "maven.modrinth:sodium:${project.sodium_version}"

	// 3D Skin Layers API for voxelized skin outer-layer meshes.
//	modCompileOnly files("libs/3dskinlayers-fabric-1.12.0+1.21.8.jar")
//	modLocalRuntime files("libs/3dskinlayers-fabric-1.12.0+1.21.8.jar")

	// Iris shader mod dependency.
	modImplementation "maven.modrinth:iris:${project.iris_version}"
	runtimeOnly "org.anarres:jcpp:${project.iris_jcpp_version}"
	runtimeOnly "io.github.douira:glsl-transformer:${project.iris_glsl_transformer_version}"
	runtimeOnly "org.antlr:antlr4-runtime:${project.iris_antlr_runtime_version}"
	implementation "org.commonmark:commonmark:${project.commonmark_version}"

	modImplementation files("libs/geckolib-fabric-1.21.8-5.2.2.jar")

	include "com.electronwill.night-config:core:3.8.2"
	include "com.electronwill.night-config:toml:3.8.2"
	include "org.commonmark:commonmark:${project.commonmark_version}"
	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
